add 4K images sample and update our project page;

--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
         .item27 { grid-column: span 3; grid-row: span 5; } /* Another larger image */
         .item28 { grid-column: span 6; grid-row: span 5; } /* Another larger image */
 
+        .item29 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
+        .item30 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
+        .item31 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
+        .item32 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
+
 
         /* Modal styling */
         #modal {
@@ -602,6 +607,12 @@
         <div class="gallery-item item26"><img src="asset/2Ksamples/3.jpeg" alt="Image 25" data-description='a cat floating in a body of water in the pool, Lean back clear and transparent water, light white, and turquoise, y2k aesthetic, soft and dreamy colors, brightly colored, popular Instagram, highlevel of detail, realistic photo feeling'></div>
         <div class="gallery-item item27"><img src="asset/2Ksamples/16.jpeg" alt="Image 26" data-description='A black cat sits on the ground, facing away from us and casting its shadow in front of it. The silhouette of a majestic lion is projected onto the wall by the light source behind the scene. Black and white photography, soft lighting, high contrast, sharp focus, symmetrical composition, simple background, portrait lens, static posture.'></div>
         <div class="gallery-item item28"><img src="asset/2Ksamples/11.jpg" alt="Image 26" data-description='🐶 和 🐱 玩 ⚽'></div>
+
+        <div class="gallery-item item29"><img src="asset/4Ksamples/1.jpg" alt="Image 27" data-description='A hot air balloon in the shape of a heart. Grand Canyon'></div>
+        <div class="gallery-item item30"><img src="asset/4Ksamples/2.jpg" alt="Image 28" data-description='a melting apple'></div>
+        <div class="gallery-item item31"><img src="asset/4Ksamples/3.jpg" alt="Image 29" data-description='A middle-aged woman of Asian descent, her dark hair streaked with silver, appears fractured and splintered, intricately embedded within a sea of broken porcelain. The porcelain glistens with splatter paint patterns in a harmonious blend of glossy and matte blues, greens, oranges, and reds, capturing her dance in a surreal juxtaposition of movement and stillness. Her skin tone, a light hue like the porcelain, adds an almost mystical quality to her form.'></div>
+        <div class="gallery-item item32"><img src="asset/4Ksamples/4.jpeg" alt="Image 30" data-description='Modern luxury contemporary luxury home interiors house, in the style of mimicking ruined materials, ray tracing, haunting houses, and stone, capture the essence of nature, gray and bronze, dynamic outdoor shots.'></div>
+
 
         </section>
     </div>
