--- a/index.html
+++ b/index.html
@@ -526,6 +526,7 @@
         <h2>Efficient High-Resolution Image Synthesis <br>
             with Linear Diffusion Transformer</h2>
         <p>Exploring the Frontiers of Efficient Generative Foundation Models</p>
+        <p>ICLR 2025</p>
 
         <!-- Add author and institution information -->
         <div style="margin-top: 20px; text-align: center;">
