--- a/index.html
+++ b/index.html
@@ -806,6 +806,23 @@
         </figure>
 
         <div class="description-content">
+          <h2>Sana ControlNet</h2>
+            <p>
+            We implement a ControlNet-Transformer architecture,
+                specifically tailored for Transformers, achieving explicit controllability alongside high-quality image generation.
+            </p>
+        </div>
+
+        <figure>
+            <img src="asset/content/controlnet/sana_controlnet.jpg" alt="Sana-controlnet model" class="inserted-image">
+            <figcaption>
+                <a rel="license" href="https://github.com/NVlabs/Sana/blob/main/asset/docs/sana_controlnet.md" target="_blank" style="color: dodgerblue">
+                    Sana-ControlNet architecture
+                </a>
+            </figcaption>
+        </figure>
+
+        <div class="description-content">
             <h2>Our Mission</h2>
             <p>Our mission is to develop <strong>efficient, lightweight, and accelerated</strong>
                 AI technologies that address practical challenges and deliver fast, open-source solutions.</p>
