--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
         </div>
         <div class="video-container">
             <video controls>
-                <source src="asset/video/Sana-0.6B-laptop.mp4" type="video/mp4">
+                <source src="asset/video/demo-final.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
