add controlnet online demo link and samples;

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
         <h2>Efficient High-Resolution Image Synthesis <br>
             with Linear Diffusion Transformer</h2>
         <p>Exploring the Frontiers of Efficient Generative Foundation Models</p>
-        <p>ICLR 2025</p>
+        <p>ICLR 2025 Oral Presentation</p>
 
         <!-- Add author and institution information -->
         <div style="margin-top: 20px; text-align: center;">
@@ -810,6 +810,10 @@
             <p>
             We implement a ControlNet-Transformer architecture,
                 specifically tailored for Transformers, achieving explicit controllability alongside high-quality image generation.
+                Try our
+                <a rel="license" href="https://nv-sana.mit.edu/ctrlnet/" target="_blank" style="color: dodgerblue">
+                    Demo
+                </a>.
             </p>
         </div>
 
@@ -818,6 +822,15 @@
             <figcaption>
                 <a rel="license" href="https://github.com/NVlabs/Sana/blob/main/asset/docs/sana_controlnet.md" target="_blank" style="color: dodgerblue">
                     Sana-ControlNet architecture
+                </a>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img src="asset/content/controlnet/controlnet_app.jpg" alt="Sana-controlnet model" class="inserted-image">
+            <figcaption>
+                <a rel="license" href="https://nv-sana.mit.edu/ctrlnet/" target="_blank" style="color: dodgerblue">
+                    Sana-ControlNet online demo
                 </a>
             </figcaption>
         </figure>
