--- a/index.html
+++ b/index.html
@@ -568,6 +568,8 @@
         <a href="https://github.com/NVlabs/Sana" class="button">Code</a>
         <a href="https://huggingface.co/collections/Efficient-Large-Model/sana-673efba2a57ed99843f11f9e" class="button">Huggingface</a>
         <a href="https://nv-sana.mit.edu/" class="button">Demo</a>
+        <a href="https://nv-sana.mit.edu/4bit/" class="button">4bit Demo</a>
+        <a href="https://nv-sana.mit.edu/ctrlnet/" class="button">ControlNet Demo</a>
         <a href="https://replicate.com/chenxwh/sana" class="button">Replicate API</a>
     </div>
 
