--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -518,8 +518,9 @@
 <!--        <a href="https://efficient-large-model.github.io" style="float: left; color: black; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 16px;"><strong>Efficient AI Group</strong></a>-->
 <!--      </div>-->
 <!--    </div>-->
-    <div  style="text-align: center; margin-top: 50px; margin-bottom: -10px">
-        <img src="asset/SANA.png" alt="Sana-logo" class="inserted-image-noshadow">
+    <div  style="text-align: center; margin-top: 50px; margin-bottom: -10px;">
+<!--        <img src="asset/SANA-Sprint.png" alt="Sana-logo" class="inserted-image-noshadow" style="width: 1000px; height: auto;">-->
+        <img src="asset/SANA-Sprint.png" alt="Sana-logo" class="inserted-image-noshadow" style="max-width: 30%; height: auto;">
     </div>
     <div class="hero">
 <!--        <div style="display: flex; justify-content: center; align-items: center; margin-left: -40px;">-->
@@ -699,7 +700,7 @@
             <h2>SANA-Sprint </h2>
         </div>
         <figure class="video-container">
-            <video controls>
+            <video controls autoplay muted loop>
                 <source src="asset/video/sana-sprint-speed-video-4images.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -711,7 +712,7 @@
 
         <!-- Video Section -->
         <figure class="video-container">
-            <video controls>
+            <video controls autoplay muted loop>
                 <source src="asset/video/sana-sprint-speed.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
