auto play video;

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
             <h2>Sana-0.6B is Deployable on Laptop GPU</h2>
         </div>
         <div class="video-container">
-            <video controls>
+            <video controls autoplay muted loop>
                 <source src="asset/video/demo-final.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -771,7 +771,7 @@
 
         <!-- Video Section -->
         <figure class="video-container">
-            <video controls>
+            <video controls autoplay muted loop>
                 <source src="asset/content/comfyui/Sana_CogVideoX_Fun.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
