1. Update for SANA-1.5; 2. Update for SANA-Sprint; 3. Update for SANA;

--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -535,7 +535,7 @@
         <div style="margin-top: 20px; text-align: center;">
             <p style="font-size: 1.3em; margin-bottom: 5px;">
                 <a href="https://lawrence-cj.github.io/" target="_blank" style="color: #76b900;">Junsong Chen</a><sup>1*</sup>,
-                <a href="" target="_blank" style="color: #76b900;">Shuchen Xue</a><sup>5*</sup>,
+                <a href="https://scholar.google.com/citations?user=aA70TOwAAAAJ&hl=en" target="_blank" style="color: #76b900;">Shuchen Xue</a><sup>5*</sup>,
                 <a href="https://yuyangzhao.com/" target="_blank" style="color: #76b900;">Yuyang Zhao</a><sup>1&dagger;</sup>,
                 <a href="https://github.com/yujincheng08" target="_blank" style="color: #76b900;">Jincheng Yu</a><sup>1&dagger;</sup>,
                 <a href="https://sayak.dev/" target="_blank" style="color: #76b900;">Sayak Paul</a><sup>1</sup>,
