--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
     <div class="hero">
         <div style="display: flex; justify-content: center; align-items: center; margin-left: -40px;">
             <img src="asset/logo.jpg" alt="Logo" style="width: 50px; height: auto; margin-right: 5px;">
-            <h1 style="margin: 0;">Sana</h1>
+            <h1 style="margin: 0;">SANA</h1>
         </div>
         <h2>Efficient High-Resolution Image Synthesis <br>
             with Linear Diffusion Transformer</h2>
