--- a/Sana-1.5/index.html
+++ b/Sana-1.5/index.html
@@ -534,8 +534,8 @@
                 <a href="https://lmxyy.me//" target="_blank" style="color: #76b900;">Muyang Li</a><sup>2</sup>,
                 <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=mWdYMZ8AAAAJ" target="_blank" style="color: #76b900;">Junyu Chen</a><sup>3</sup>,
                 <a href="https://han-cai.github.io//" target="_blank" style="color: #76b900;">Han Cai</a><sup>1</sup>,
-                <a href="https://xieenze.github.io/" target="_blank" style="color: #76b900;">Bingchen Liu</a><sup>4</sup>,
-                <a href="https://xieenze.github.io/" target="_blank" style="color: #76b900;">Daquan Zhou</a><sup>5</sup>,
+                <a href="https://scholar.google.com/citations?user=uKdv6SUAAAAJ&hl=en" target="_blank" style="color: #76b900;">Bingchen Liu</a><sup>4</sup>,
+                <a href="https://zhoudaquan.github.io/homepage.io/index.html" target="_blank" style="color: #76b900;">Daquan Zhou</a><sup>5</sup>,
                 <a href="https://hanlab.mit.edu/songhan/" target="_blank" style="color: #76b900;">Song Han</a><sup>1,2</sup>
             </p>
             <p style="font-size: 1.2em; color: #888;">
