Update for SANA-1.5;

--- a/Sana-1.5/index.html
+++ b/Sana-1.5/index.html
@@ -79,47 +79,22 @@
             transform: scale(1.2); /* Scale the image to 1.2 times its original size */
         }
         /* Define specific grid item placements */
-        .item1 { grid-column: span 12; grid-row: span 8; } /* Large image */
-        .item2 { grid-column: span 4; grid-row: span 5; } /* Smaller image */
-        .item3 { grid-column: span 4; grid-row: span 5; } /* Horizontal image */
-        .item4 { grid-column: span 2; grid-row: span 5; } /* Wide image */
+        .item1 { grid-column: span 4; grid-row: span 3; } /* Large image */
+        .item2 { grid-column: span 4; grid-row: span 3; } /* Smaller image */
+        .item3 { grid-column: span 4; grid-row: span 3; } /* Horizontal image */
 
-        .item9 { grid-column: span 3; grid-row: span 3; } /* Vertical image */
+        .item4 { grid-column: span 3; grid-row: span 5; } /* Wide image */
+        .item5 { grid-column: span 3; grid-row: span 5; } /* Wide image */
+        .item6 { grid-column: span 3; grid-row: span 5; } /* Wide image */
+        .item7 { grid-column: span 3; grid-row: span 5; } /* Wide image */
+
+        .item8 { grid-column: span 3; grid-row: span 3; } /* Vertical image */
+        .item9 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
         .item10 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
         .item11 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
-        .item12 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
 
-        .item5 { grid-column: span 2; grid-row: span 5; } /* Wide image */
-        .item6 { grid-column: span 4; grid-row: span 5; } /* Wide image */
-        .item7 { grid-column: span 4; grid-row: span 5; } /* Wide image */
-        .item8 { grid-column: span 2; grid-row: span 5; } /* Wide image */
-
+        .item12 { grid-column: span 6; grid-row: span 4; } /* Another larger image */
         .item13 { grid-column: span 6; grid-row: span 4; } /* Another larger image */
-        /*.item14 { grid-column: span 2; grid-row: span 4; } !* Another larger image *!*/
-        .item15 { grid-column: span 6; grid-row: span 4; } /* Another larger image */
-
-        .item16 { grid-column: span 4; grid-row: span 4; } /* Another larger image */
-        .item17 { grid-column: span 2; grid-row: span 4; } /* Another larger image */
-        .item18 { grid-column: span 2; grid-row: span 4; } /* Another larger image */
-
-        .item19 { grid-column: span 3; grid-row: span 5; } /* Another larger image */
-        .item20 { grid-column: span 3; grid-row: span 5; } /* Another larger image */
-        .item21 { grid-column: span 3; grid-row: span 5; } /* Another larger image */
-        .item22 { grid-column: span 3; grid-row: span 5; } /* Another larger image */
-
-        .item23 { grid-column: span 6; grid-row: span 4; } /* Another larger image */
-        .item24 { grid-column: span 3; grid-row: span 4; } /* Another larger image */
-        .item25 { grid-column: span 3; grid-row: span 4; } /* Another larger image */
-
-        .item26 { grid-column: span 3; grid-row: span 5; } /* Another larger image */
-        .item27 { grid-column: span 3; grid-row: span 5; } /* Another larger image */
-        .item28 { grid-column: span 6; grid-row: span 5; } /* Another larger image */
-
-        .item29 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
-        .item30 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
-        .item31 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
-        .item32 { grid-column: span 3; grid-row: span 3; } /* Another larger image */
-
 
         /* Modal styling */
         #modal {
@@ -563,20 +538,22 @@
 
     <div class="gallery-container">
         <section class="gallery" id="gallery">
-        <div class="gallery-item item1"><img src="asset/samples/place_holder.png" alt="Image 1" data-description="Close-up of the top peak of Aconcagua, a snow-covered mountain in the Himalayas at sunrise during the golden hour. Award-winning photography, shot on a Canon EOS R5 in the style of Ansel Adams."></div>
-<!--        <div class="gallery-item item2"><img src="asset/samples/13.jpg" alt="Image 2" data-description="An astronaut lying in the middle of white ROSES, in the style of Unsplash photography."></div>-->
-<!--        <div class="gallery-item item6"><img src="asset/samples/8.jpg" alt="Image 6" data-description="Peach-faced lovebird with a slick pompadour."></div>-->
-<!--        <div class="gallery-item item4"><img src="asset/samples/5.jpg" alt="Image 4" data-description="A protagonist, at the beginning of their story, about to embark on their journey."></div>-->
+        <div class="gallery-item item1"><img src="asset/samples/11.png" alt="Image 1" data-description=""></div>
+        <div class="gallery-item item2"><img src="asset/samples/12.jpg" alt="Image 2" data-description=""></div>
+        <div class="gallery-item item3"><img src="asset/samples/13.png" alt="Image 3" data-description=""></div>
 
-<!--        <div class="gallery-item item5"><img src="asset/samples/6.jpg" alt="Image 5" data-description="A close-up photo of a juicy gourmet cheeseburger with caramelized onions, melted cheese, and a perfectly toasted beef patty, served in a soft golden bun. The cheeseburger has a slight steam rising from it, adding a sense of freshness and warmth. Natural light highlights the rich textures and glossy sauces, enhancing the mouth-watering look. The background is slightly blurred, creating a cozy atmosphere for food advertising or restaurant promotions."></div>-->
-<!--        <div class="gallery-item item3"><img src="asset/samples/16.jpg" alt="Image 3" data-description="A hyper-realistic advertising image of a young snowboarder entirely sculpted from snow, exuding an edgy, dynamic energy akin to Dragon Alliance's bold aesthetic. The snowboarder is caught mid-trick, twisting through the air with incredible detail showing the texture of packed snow forming their body, icy contours, and sharp features. Their snowboard, sleek and modern, glistens with frost and ice particles trailing behind. The background features a moody mountain scene with stormy clouds and shards of sunlight breaking through, adding drama and intensity to the shot. The lighting is sharp and high-contrast, with deep shadows emphasizing the snowboarder's angular snow-built form, creating an avant-garde, adrenaline-filled vibe. The image feels raw, rebellious, and unapologetically bold, perfect for high-impact winter sports advertising."></div>-->
-<!--        <div class="gallery-item item7"><img src="asset/samples/4.jpg" alt="Image 7" data-description='an old porsche 911 in turkis color parking at malibu beach. Shoot from the front low level with kodak portra 160. Ultra realistic, muted tones. intercooler inlet, modern front lips.'></div>-->
-<!--        <div class="gallery-item item8"><img src="asset/samples/9.jpg" alt="Image 8" data-description="Art illustration, sports minimalism style, fuzzy form, black cat and white cat, solid color background, close-up, pure flat illustration, extreme high-definition picture, cat's eyes depict clear and meticulous, high aesthetic feeling, graphic, fuzzy, felt, minimalism, blank space, artistic conception, advanced, masterpiece, minimalism, fuzzy fur texture."></div>-->
+        <div class="gallery-item item4"><img src="asset/samples/15.jpg" alt="Image 4" data-description="A close-up photo of a juicy gourmet cheeseburger with caramelized onions, melted cheese, and a perfectly toasted beef patty, served in a soft golden bun. The cheeseburger has a slight steam rising from it, adding a sense of freshness and warmth. Natural light highlights the rich textures and glossy sauces, enhancing the mouth-watering look. The background is slightly blurred, creating a cozy atmosphere for food advertising or restaurant promotions."></div>
+        <div class="gallery-item item5"><img src="asset/samples/16.jpg" alt="Image 5" data-description="A hyper-realistic advertising image of a young snowboarder entirely sculpted from snow, exuding an edgy, dynamic energy akin to Dragon Alliance's bold aesthetic. The snowboarder is caught mid-trick, twisting through the air with incredible detail showing the texture of packed snow forming their body, icy contours, and sharp features. Their snowboard, sleek and modern, glistens with frost and ice particles trailing behind. The background features a moody mountain scene with stormy clouds and shards of sunlight breaking through, adding drama and intensity to the shot. The lighting is sharp and high-contrast, with deep shadows emphasizing the snowboarder's angular snow-built form, creating an avant-garde, adrenaline-filled vibe. The image feels raw, rebellious, and unapologetically bold, perfect for high-impact winter sports advertising."></div>
+        <div class="gallery-item item6"><img src="asset/samples/17.png" alt="Image 6" data-description='an old porsche 911 in turkis color parking at malibu beach. Shoot from the front low level with kodak portra 160. Ultra realistic, muted tones. intercooler inlet, modern front lips.'></div>
+        <div class="gallery-item item7"><img src="asset/samples/18.png" alt="Image 7" data-description="Art illustration, sports minimalism style, fuzzy form, black cat and white cat, solid color background, close-up, pure flat illustration, extreme high-definition picture, cat's eyes depict clear and meticulous, high aesthetic feeling, graphic, fuzzy, felt, minimalism, blank space, artistic conception, advanced, masterpiece, minimalism, fuzzy fur texture."></div>
 
-<!--        <div class="gallery-item item9"><img src="asset/samples/18.jpg" alt="Image 9" data-description='A sunny beach resort with golden sand and turquoise water. In the center of the scene, a large wooden sign displays the word "SPRINT" in bold, blue and white letters, blending naturally into the environment. The text is sleek and modern, with sharp edges and a faint shadow effect. The atmosphere is relaxed and cheerful, with a sense of energy and fun.'></div>-->
-<!--        <div class="gallery-item item10"><img src="asset/samples/10.jpg" alt="Image 10" data-description="The image shows a young woman, possibly in her late teens or early twenties, with long blonde hair and bangs. She appears to be alone in a brightly lit room with a plain background. The woman is the focus of the image, in the foreground, wearing a light pink pajama top. The woman seems to be of Caucasian race, with a potentially upper-middle-class income, possibly between $50,000 and $100,000 per year. Her religious beliefs and political affiliations are difficult to ascertain from just an image. She appears calm and content, possibly slightly playful, in the image. Her clothing suggests a relaxed and comfortable demeanor, although her makeup is rather precise and suggests an interest in beauty and style. Some potential interests include fashion, makeup, and photography, and, potentially, online gaming or social media, shopping, and excessive screen time. She seems serene and stylish, radiating an aura of quiet confidence. We can target her with beauty products, luxury items and subscription boxes, such as Sephora collections, Glossier skincare, and Stitch Fix styling services, and other similar premium goods. with both hands on her head gathering her hair"></div>-->
-<!--        <div class="gallery-item item11"><img src="asset/samples/1.jpg" alt="Image 11" data-description="Two mugs with steam forming heart shapes."></div>-->
-<!--        <div class="gallery-item item12"><img src="asset/samples/12.jpg" alt="Image 12" data-description="An aristocratic man in a vintage equestrian outfit standing beside a horse in front of a grand countryside mansion. The man has a refined and confident expression, wearing a tailored tweed jacket with a high-collar shirt and gloves, exuding timeless elegance. The background features lush green hills and a stately manor in soft, muted tones, evoking a classic old money aesthetic. The scene captures a sophisticated equestrian vibe with natural outdoor lighting and a warm, heritage color palette."></div>-->
+        <div class="gallery-item item8"><img src="asset/samples/6.jpg" alt="Image 8" data-description="Two mugs with steam forming heart shapes."></div>
+        <div class="gallery-item item9"><img src="asset/samples/3.png" alt="Image 9" data-description="The image shows a young woman, possibly in her late teens or early twenties, with long blonde hair and bangs. She appears to be alone in a brightly lit room with a plain background. The woman is the focus of the image, in the foreground, wearing a light pink pajama top. The woman seems to be of Caucasian race, with a potentially upper-middle-class income, possibly between $50,000 and $100,000 per year. Her religious beliefs and political affiliations are difficult to ascertain from just an image. She appears calm and content, possibly slightly playful, in the image. Her clothing suggests a relaxed and comfortable demeanor, although her makeup is rather precise and suggests an interest in beauty and style. Some potential interests include fashion, makeup, and photography, and, potentially, online gaming or social media, shopping, and excessive screen time. She seems serene and stylish, radiating an aura of quiet confidence. We can target her with beauty products, luxury items and subscription boxes, such as Sephora collections, Glossier skincare, and Stitch Fix styling services, and other similar premium goods. with both hands on her head gathering her hair"></div>
+        <div class="gallery-item item10"><img src="asset/samples/9.jpg" alt="Image 10" data-description="An aristocratic man in a vintage equestrian outfit standing beside a horse in front of a grand countryside mansion. The man has a refined and confident expression, wearing a tailored tweed jacket with a high-collar shirt and gloves, exuding timeless elegance. The background features lush green hills and a stately manor in soft, muted tones, evoking a classic old money aesthetic. The scene captures a sophisticated equestrian vibe with natural outdoor lighting and a warm, heritage color palette."></div>
+        <div class="gallery-item item11"><img src="asset/samples/10.png" alt="Image 11" data-description="An aristocratic man in a vintage equestrian outfit standing beside a horse in front of a grand countryside mansion. The man has a refined and confident expression, wearing a tailored tweed jacket with a high-collar shirt and gloves, exuding timeless elegance. The background features lush green hills and a stately manor in soft, muted tones, evoking a classic old money aesthetic. The scene captures a sophisticated equestrian vibe with natural outdoor lighting and a warm, heritage color palette."></div>
+
+        <div class="gallery-item item12"><img src="asset/samples/14.png" alt="Image 12" data-description=""></div>
+        <div class="gallery-item item13"><img src="asset/samples/5.png" alt="Image 13" data-description=""></div>
 
 <!--        <div class="gallery-item item13"><img src="asset/samples/14.jpg" alt="Image 13" data-description="A wormhole opens in the vastness of space, its swirling vortex of colors drawing the viewer's eye. The event horizon is a maelstrom of blues and purples, with hints of the unknown universe beyond its edges."></div>-->
 <!--&lt;!&ndash;        <div class="gallery-item item14"><img src="asset/samples/7.jpg" alt="Image 14" data-description='create name "SANA" standing in the seaside area with sunrise and flowers the letters is whitesand made, vibrant, graffiti, photo, typography, 3d render'></div>&ndash;&gt;-->
