--- a/index.html
+++ b/index.html
@@ -571,6 +571,9 @@
         <a href="https://nv-sana.mit.edu/4bit/" class="button">4bit Demo</a>
         <a href="https://nv-sana.mit.edu/ctrlnet/" class="button">ControlNet Demo</a>
         <a href="https://replicate.com/chenxwh/sana" class="button">Replicate API</a>
+        <br>
+        <a href="https://nvlabs.github.io/Sana/Sana-1.5/" class="button">SANA-1.5</a>
+        <a href="https://nvlabs.github.io/Sana/Sprint/" class="button">SANA-Sprint</a>
     </div>
 
     <div class="gallery-container">
