Update for SANA;

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
             border-radius: 30px;
             text-decoration: none;
         }
+        .button_green {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 5px;
+            font-size: 0.9em;
+            color: black;
+            background-color: #76b900;
+            border-radius: 30px;
+            text-decoration: none;
+        }
         .gallery-container {
             max-width: 77%; /* Limit the width of the gallery */
             margin: 0 auto; /* Center the gallery */
@@ -572,8 +582,8 @@
         <a href="https://nv-sana.mit.edu/ctrlnet/" class="button">ControlNet Demo</a>
         <a href="https://replicate.com/chenxwh/sana" class="button">Replicate API</a>
         <br>
-        <a href="https://nvlabs.github.io/Sana/Sana-1.5/" class="button">SANA-1.5</a>
-        <a href="https://nvlabs.github.io/Sana/Sprint/" class="button">SANA-Sprint</a>
+        <a href="https://nvlabs.github.io/Sana/Sana-1.5/" class="button_green">SANA-1.5</a>
+        <a href="https://nvlabs.github.io/Sana/Sprint/" class="button_green">SANA-Sprint</a>
     </div>
 
     <div class="gallery-container">
