--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -275,7 +275,7 @@
             margin: 20px 0;  /* Add some vertical margin around the video */
         }
         video {
-            max-width: 80%;  /* The video will scale to fit the container */
+            max-width: 90%;  /* The video will scale to fit the container */
             height: auto;  /* Maintain the video's aspect ratio */
             border-radius: 10px;  /* Rounded corners for the video */
             box-shadow: 2px 2px 10px 3px #00000054;
@@ -416,7 +416,7 @@
                 max-width: 384px; /* Limit the width to 80% of the screen */
             }
             video {
-                max-width: 728px;  /* The video will scale to fit the container */
+                max-width: 60%;  /* The video will scale to fit the container */
             }
         }
         @media (max-width: 768px) {
@@ -545,6 +545,9 @@
                 <a href="https://hanlab.mit.edu/songhan/" target="_blank" style="color: #76b900;">Song Han</a><sup>1,2</sup>
             </p>
             <p style="font-size: 1.2em; color: #888;">
+                {junsongc,enzex,songh}@nvidia.com,
+                xueshuchen.acad@gmail.com
+                <br>
                 <sup>1</sup>NVIDIA,&nbsp <sup>2</sup>MIT,&nbsp <sup>3</sup>Tsinghua University,&nbsp <sup>4</sup>Huggingface,&nbsp <sup>5</sup>Independent Researcher
                 <br>
                 *Equal contribution&nbsp;&nbsp;   &dagger;Core contributor&nbsp;&nbsp;  &Dagger;Project Lead
@@ -562,9 +565,33 @@
           </div>
         </div>
 
-        <a href="" class="button">Paper</a>
+        <a href="https://arxiv.org/pdf/2503.09641" class="button">Paper</a>
         <a href="https://github.com/NVlabs/Sana" class="button">Code</a>
     </div>
+
+    <!-- Video Section -->
+    <figure class="video-container">
+        <video controls autoplay muted loop>
+            <source src="asset/video/sana-sprint-speed-video-4images.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <figcaption>
+            Real speed on H100 GPU for generating 1024 ×1024 images.
+        </figcaption>
+    </figure>
+    <!-- End Video Section -->
+
+    <!-- Video Section -->
+    <figure class="video-container">
+        <video controls autoplay muted loop>
+            <source src="asset/video/sana-sprint-speed.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <figcaption>
+        Compare the speed of 1-step, 4-step Sana-Sprint and 20-step teacher model Sana.
+        </figcaption>
+    </figure>
+    <!-- End Video Section -->
 
     <div class="gallery-container">
         <section class="gallery" id="gallery">
@@ -694,33 +721,6 @@
         <div>
             <img src="asset/content/main_table.jpg" alt="Sana performance" class="inserted-image">
         </div>
-
-        <!-- Video Section -->
-        <div class="description-content">
-            <h2>SANA-Sprint </h2>
-        </div>
-        <figure class="video-container">
-            <video controls autoplay muted loop>
-                <source src="asset/video/sana-sprint-speed-video-4images.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <figcaption>
-                Real speed on H100 GPU for generating 1024 ×1024 images.
-            </figcaption>
-        </figure>
-        <!-- End Video Section -->
-
-        <!-- Video Section -->
-        <figure class="video-container">
-            <video controls autoplay muted loop>
-                <source src="asset/video/sana-sprint-speed.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <figcaption>
-            Compare the speed of 1-step, 4-step Sana-Sprint and 20-step teacher model Sana.
-            </figcaption>
-        </figure>
-        <!-- End Video Section -->
 
         <div class="description-content">
           <h2>SANA-Sprint ControlNet</h2>
