update citation for sana-sprint;

--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -768,10 +768,10 @@
       title={SANA-Sprint: One-Step Diffusion with Continuous-Time Consistency Distillation},
       author={Junsong Chen and Shuchen Xue and Yuyang Zhao and Jincheng Yu and Sayak Paul and Junyu Chen and Han Cai and Enze Xie and Song Han},
       year={2025},
-      eprint={xxxx.xxxxx},
+      eprint={2503.09641},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
-      url={https://arxiv.org/abs/xxxx.xxxxx},
+      url={https://arxiv.org/abs/2503.09641},
     }</code></pre>
             </div>
         </section>
