update sprint demo link;

--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -567,6 +567,7 @@
 
         <a href="https://arxiv.org/pdf/2503.09641" class="button">Paper</a>
         <a href="https://github.com/NVlabs/Sana" class="button">Code</a>
+        <a href="https://nv-sana.mit.edu/sprint" class="button">Demo</a>
     </div>
 
     <!-- Video Section -->
