update author info and add table figure;

--- a/Sana-1.5/index.html
+++ b/Sana-1.5/index.html
@@ -504,6 +504,7 @@
                 <a href="https://yuyangzhao.com/" target="_blank" style="color: #76b900;">Yuyang Zhao</a><sup>1&dagger;</sup>,
                 <a href="https://github.com/yujincheng08" target="_blank" style="color: #76b900;">Jincheng Yu</a><sup>1&dagger;</sup>,
                 <a href="https://lzhu.me//" target="_blank" style="color: #76b900;">Ligeng Zhu</a><sup>1&dagger;</sup>,
+                <a href="https://hills-code.github.io/" target="_blank" style="color: #76b900;">Chengyue We</a><sup>6</sup>,
                 <a href="https://yujunlin.com//" target="_blank" style="color: #76b900;">Yujun Lin</a><sup>2</sup>,<br>
                 <a href="https://hanlab.mit.edu/team/zhekai-zhang/" target="_blank" style="color: #76b900;">Zhekai Zhang</a><sup>2</sup>,
                 <a href="https://lmxyy.me//" target="_blank" style="color: #76b900;">Muyang Li</a><sup>2</sup>,
@@ -514,7 +515,7 @@
                 <a href="https://hanlab.mit.edu/songhan/" target="_blank" style="color: #76b900;">Song Han</a><sup>1,2</sup>
             </p>
             <p style="font-size: 1.2em; color: #888;">
-                <sup>1</sup>NVIDIA,&nbsp <sup>2</sup>MIT,&nbsp <sup>3</sup>Tsinghua University,&nbsp <sup>4</sup>Playground,&nbsp <sup>5</sup> Peking University
+                <sup>1</sup>NVIDIA,&nbsp <sup>2</sup>MIT,&nbsp <sup>3</sup>Tsinghua University,&nbsp <sup>4</sup>Playground,&nbsp <sup>5</sup> Peking University <sup>6</sup> HKU
                 <br>
                 *Equal contribution&nbsp;&nbsp;   &dagger;Core contributor&nbsp;&nbsp;
             </p>
@@ -656,6 +657,7 @@
 
         <div>
             <img src="asset/content/main_table.jpg" alt="Sana performance" class="inserted-image">
+            <img src="asset/content/inference_scaling_table.jpg" alt="Sana performance" class="inserted-image">
         </div>
 
         <div class="description-content">
@@ -672,7 +674,7 @@
             <div class="citation-content">
                 <pre><code>@misc{xie2025sana,
       title={SANA 1.5: Efficient Scaling of Training-Time and Inference-Time Compute in Linear Diffusion Transformer},
-      author={Xie, Enze and Chen, Junsong and Zhao, Yuyang and Yu, Jincheng and Zhu, Ligeng and Lin, Yujun and Zhang, Zhekai and Li, Muyang and Chen, Junyu and Cai, Han and others},
+      author={Xie, Enze and Chen, Junsong and Zhao, Yuyang and Yu, Jincheng and Zhu, Ligeng and Wu, Chengyue and Lin, Yujun and Zhang, Zhekai and Li, Muyang and Chen, Junyu and Cai, Han and others},
       year={2025},
       eprint={2501.18427},
       archivePrefix={arXiv},
