--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
             color: black;
-            background-image: url('asset/samples/pexels-photo-28821825.jpeg'); /* Background image */
+             /* background-image: url('asset/samples/pexels-photo-28821825.jpeg'); Background image */
             background-size: contain; /* Cover the entire viewport */
             background-attachment: fixed; /* Fixed background */
             background-position: center;
