update demo link;

--- a/Sana-1.5/index.html
+++ b/Sana-1.5/index.html
@@ -534,7 +534,7 @@
 
         <a href="https://arxiv.org/abs/2501.18427" class="button">Paper</a>
         <a href="https://github.com/NVlabs/Sana" class="button">Code</a>
-        <a href="https://nv-sana.mit.edu/" class="button">Demo</a>
+        <a href="https://sana.hanlab.ai/" class="button">Demo</a>
     </div>
 
     <div class="gallery-container">
@@ -603,9 +603,9 @@
     <section class="description_noborder">
         <div>
             <img src="asset/content/geneval_comparison.png" alt="model growth performance on GenEval" class="inserted-image"
-                 style="max-width: 21.5%; height: auto; display: inline-block;">
+                 style="max-width: 400px; height: auto; display: inline-block;">
             <img src="asset/content/optimizer_loss_comparison_with_ema.png" alt="8-bit optimizer" class="inserted-image"
-                 style="max-width: 22.3%; height: auto; display: inline-block;">
+                 style="max-width: 415px; height: auto; display: inline-block;">
             <img src="asset/content/model-init.png" alt="model growth strategy for SANA-1.5" class="inserted-image">
         </div>
 
