--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -567,7 +567,8 @@
 
         <a href="https://arxiv.org/pdf/2503.09641" class="button">Paper</a>
         <a href="https://github.com/NVlabs/Sana" class="button">Code</a>
-        <a href="https://nv-sana.mit.edu/sprint" class="button">Demo</a>
+        <a href="https://sana.hanlab.ai/sprint" class="button">Self Demo</a>
+        <a href="https://huggingface.co/spaces/Efficient-Large-Model/SanaSprint" class="button">HF Demo</a>
     </div>
 
     <!-- Video Section -->
@@ -729,7 +730,7 @@
             We implement a ControlNet-Transformer architecture,
                 specifically tailored for Transformers, achieving explicit controllability alongside high-quality image generation.
 <!--                Try our-->
-<!--                <a rel="license" href="https://nv-sana.mit.edu/ctrlnet/" target="_blank" style="color: dodgerblue">-->
+<!--                <a rel="license" href="https://sana.hanlab.ai/ctrlnet/" target="_blank" style="color: dodgerblue">-->
 <!--                    Demo-->
                 </a>
             </p>
