--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@
         <a href="https://arxiv.org/abs/2410.10629" class="button">Paper</a>
         <a href="https://github.com/NVlabs/Sana" class="button">Code</a>
         <a href="https://huggingface.co/collections/Efficient-Large-Model/sana-673efba2a57ed99843f11f9e" class="button">Huggingface</a>
-        <a href="https://nv-sana.mit.edu/" class="button">Demo</a>
-        <a href="https://nv-sana.mit.edu/4bit/" class="button">4bit Demo</a>
-        <a href="https://nv-sana.mit.edu/ctrlnet/" class="button">ControlNet Demo</a>
+        <a href="https://sana.hanlab.ai/" class="button">Demo</a>
+        <a href="https://sana.hanlab.ai/4bit/" class="button">4bit Demo</a>
+        <a href="https://sana.hanlab.ai/ctrlnet/" class="button">ControlNet Demo</a>
         <a href="https://replicate.com/chenxwh/sana" class="button">Replicate API</a>
         <br>
         <a href="https://nvlabs.github.io/Sana/Sana-1.5/" class="button_green">SANA-1.5</a>
@@ -826,7 +826,7 @@
             We implement a ControlNet-Transformer architecture,
                 specifically tailored for Transformers, achieving explicit controllability alongside high-quality image generation.
                 Try our
-                <a rel="license" href="https://nv-sana.mit.edu/ctrlnet/" target="_blank" style="color: dodgerblue">
+                <a rel="license" href="https://sana.hanlab.ai/ctrlnet/" target="_blank" style="color: dodgerblue">
                     Demo
                 </a>.
             </p>
@@ -844,7 +844,7 @@
         <figure>
             <img src="asset/content/controlnet/controlnet_app.jpg" alt="Sana-controlnet model" class="inserted-image">
             <figcaption>
-                <a rel="license" href="https://nv-sana.mit.edu/ctrlnet/" target="_blank" style="color: dodgerblue">
+                <a rel="license" href="https://sana.hanlab.ai/ctrlnet/" target="_blank" style="color: dodgerblue">
                     Sana-ControlNet online demo
                 </a>
             </figcaption>
