--- a/Sana-1.5/index.html
+++ b/Sana-1.5/index.html
@@ -6,7 +6,7 @@
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sana</title>
+    <title>SANA-1.5</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -495,6 +495,7 @@
         <h2>Efficient Scaling of Training-Time and <br>
             Inference-Time Compute in Linear Diffusion Transformer</h2>
         <p>Exploring the Frontiers of Efficient Generative Foundation Models</p>
+        <p>ICML 2025</p>
 
         <!-- Add author and institution information -->
         <div style="margin-top: 20px; text-align: center;">
