--- a/Sprint/index.html
+++ b/Sprint/index.html
@@ -6,7 +6,7 @@
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sana</title>
+    <title>SANA-Sprint</title>
     <style>
         body {
             font-family: Arial, sans-serif;
